IISCRUM-2279 Fix spacing

--- a/public/sass/iiris_custom_modal.scss
+++ b/public/sass/iiris_custom_modal.scss
@@ -70,8 +70,8 @@ $table-line-color: #cccccc;
             position: relative;
             .iiris-search-icon {
                 position: absolute;
-                left: 8px;
-                top: 8px;
+                left: 4px;
+                top: 3px;
             }
             .gf-form-input {
                 height: 30px;
